-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.7, Lustre 2.15.0
-
TOSS 3.7.9 (RHEL 7.9) power pc
-
3
-
9223372036854775807
When building our local branch, which is based on v2_12_7, the ppc64le build fails due to a type error:
llog_reader.c:887:9: error: format '%llu' expects argument of type 'long long unsigned int', but argument 2 has type '__u64' [-Werror=format=]
This is due to a printf call that uses %llu whereas __le64_to_cpu returns a __u64. Elsewhere in the same file the return value of __le64_to_cpu is cast as necessary to match the print formatting, including to an unsigned long long.